--- a/app/globals.css
+++ b/app/globals.css
@@ -130,3 +130,11 @@ form button {
   @apply absolute bottom-0 right-0 
       rounded-tl-md;
 }
+
+/* graphics */
+.center-image {
+  width: 50px;
+  height: 50px;
+  margin: 20px;
+  display: inline-block;
+}
